# the-rust-lang-book

./: Cargo.toml
async_programming/: Cargo.toml
async_programming/src/: concurrent_async.rs  main.rs
cargo_and_crates/: Cargo.toml
cargo_and_crates/src/: lib.rs  main.rs
chapter_2_guessing_game/: Cargo.toml
chapter_3_common_concepts/: Cargo.toml
chapter_3_common_concepts/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
closures_and_iterators/src/: main.rs
common_collections/src/: hashmaps.rs  main.rs  utf_encoding.rs
common_concepts/src/: data_types.rs  main.rs
enums/src/: main.rs
error_handling/src/: main.rs
fearless_concurrency/src/: main.rs  message_passing.rs  shared_state.rs
generic_types/src/: main.rs
iterators/src/: main.rs
lifetimes/src/: main.rs
mini-grep/src/: lib.rs  main.rs
module_system/restaurant/src/: lib.rs
module_system/src/: main.rs
object_oriented_design/: Cargo.toml
object_oriented_design/src/: lib.rs  main.rs
pattern_matching/src/: main.rs
rust_ownership/src/: main.rs
smart_pointers/src/: main.rs  reference_counting.rs
structs/src/: main.rs
tests/src/: lib.rs
tests/tests/: integration_test.rs
traits/src/: lib.rs  main.rs
unsafe_rust/src/: main.rs
workspaces_add/add_one/: Cargo.toml
workspaces_add/add_one/src/: lib.rs
workspaces_add/add_two/src/: lib.rs
workspaces_add/adder/: Cargo.toml
workspaces_add/adder/src/: main.rs
